--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.11.4",
+    "@reduxjs/toolkit": "^1.9.1",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "react": "^18.2.0",
