--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "printWidth": 80,
   "singleQuote": false,
   "trailingComma": "none",
-  "jsxBracketSameLine": true,
+  "bracketSameLine": true,
   "semi": false
 }
