--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:prod": "env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier:write": "npx prettier --write **/*.{js,jsx,json} && npx prettier --write *.{js,jsx,json}"
+    "prettier:write": "npx prettier --write \"**/*.{js,jsx,json}\" && npx prettier --write \"*.{js,jsx,json}\"",
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
@@ -68,6 +71,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
+    "husky": "^8.0.0",
     "jest": "^27.2.5",
     "prettier": "2.4.1"
   }
