--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.3.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
