--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://prod.example.com
-REACT_APP_IS_PROD=true
+REACT_APP_BASE_URL=https://prod.example.com
+REACT_APP_APP_ENV=prod
