--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://stage.example.com
-REACT_APP_IS_PROD=false
+REACT_APP_BASE_URL=https://stage.example.com
+REACT_APP_APP_ENV=staging
