--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.3.0",
     "formik": "^2.2.9",
+    "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -62,8 +63,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@sentry/react": "^7.31.1",
-    "@sentry/tracing": "^7.31.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
