--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "web-vitals": "^3.1.1",
