--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
+    "react-social-login-buttons": "^3.6.1",
+    "reactjs-social-login": "^2.6.2",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "web-vitals": "^3.1.1",
