--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier:write": "npx prettier --write \"**/*.{js,jsx,json}\" && npx prettier --write \"*.{js,jsx,json}\"",
+    "prettier:write": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\" --loglevel error",
     "lint": "eslint .",
     "prepare": "husky install"
   },
