--- a/package.json
+++ b/package.json
@@ -3,17 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.14.17",
+    "@mui/x-date-pickers": "^6.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/icons": "^5.0.1",
+    "antd": "^5.6.2",
+    "dayjs": "^1.11.7",
+    "prop-types": "^15.7.2",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.0.1",
+    "rrule": "^2.7.1",
+    "sass": "^1.57.1",
+    "yup": "^0.32.11",
+    "formik": "^2.4.5"
   },
   "scripts": {
+    "clean": "rimraf ./lib && mkdir lib",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "clean:exampledist": "rimraf ./exampledist/static",
+    "build:exampledist": "npm run clean:exampledist && cpy src/css/style.css exampledist/static && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js",
+    "example": "webpack-dev-server --mode development --config ./webpack/webpack-dev.config.js --hot",
+    "analyz": "cross-env NODE_ENV=production npm_config_report=true npm run build",
+    "build:dll": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.dll.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,6 +43,28 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "fs-extra": "^11.1.0",
+    "json-loader": "0.5.7",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "style-loader": "0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.11.3"
   },
   "browserslist": {
     "production": [
