--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.0",
@@ -11,20 +12,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@ant-design/icons": "^5.0.1",
     "antd": "^5.6.2",
     "dayjs": "^1.11.7",
+    "formik": "^2.4.5",
     "prop-types": "^15.7.2",
+    "react": "^18.2.0",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.0.1",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "rrule": "^2.7.1",
     "sass": "^1.57.1",
-    "yup": "^0.32.11",
-    "formik": "^2.4.5"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "clean": "rimraf ./lib && mkdir lib",
@@ -60,6 +60,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "style-loader": "0.23.1",
+    "tailwindcss": "^3.3.5",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.3.2",
