--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.14.17",
     "@mui/x-date-pickers": "^6.0.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "rrule": "^2.7.1",
     "sass": "^1.57.1",
@@ -30,8 +32,8 @@
   "scripts": {
     "clean": "rimraf ./lib && mkdir lib",
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "clean:exampledist": "rimraf ./exampledist/static",
     "build:exampledist": "npm run clean:exampledist && cpy src/css/style.css exampledist/static && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js",
@@ -62,7 +64,7 @@
     "gh-pages": "^6.0.0",
     "json-loader": "0.5.7",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^6.20.0",
     "style-loader": "0.23.1",
     "tailwindcss": "^3.3.5",
     "url-loader": "^1.1.2",
