--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.2",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.7",
     "formik": "^2.4.5",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^18.2.0",
