--- a/package.json
+++ b/package.json
@@ -18,18 +18,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.5",
+    "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.6.2",
     "axios": "^1.3.0",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
+    "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.19",
     "react-redux": "^8.0.5",
@@ -40,6 +47,7 @@
     "reactjs-social-login": "^2.6.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "rrule": "^2.7.1",
     "sass": "^1.57.1",
     "web-vitals": "^3.1.1",
     "yup": "^0.32.11"
@@ -71,13 +79,35 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-jest": "^29.3.1",
+    "babel-loader": "7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
+    "fs-extra": "^11.1.0",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
-    "prettier": "2.8.3"
+    "json-loader": "0.5.7",
+    "prettier": "2.8.3",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^6.20.0",
+    "style-loader": "0.23.1",
+    "tailwindcss": "^3.3.5",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.11.3"
   }
 }
