--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "env-cmd -f .env.dev react-scripts start",
-    "start:qa": "env-cmd -f .env.qa react-scripts start",
-    "start:stage": "env-cmd -f .env.staging react-scripts start",
+    "start:dev": "set PORT=4070 && env-cmd -f .env.dev react-scripts start",
+    "start:qa": "set PORT=4070 && env-cmd -f .env.qa react-scripts start",
+    "start:stage": "set PORT=4070 && env-cmd -f .env.staging react-scripts start",
     "build": "react-scripts build",
     "build:dev": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
     "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
