--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
     "build:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
+    "serve:develop": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
+    "serve:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
+    "serve:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
+    "serve:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier:write": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\" --loglevel error",
