fix(serverConfig): Change Server Config

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "start:develop": "set PORT=4070 && env-cmd -f .env.dev react-scripts start",
     "start:qa": "set PORT=4071 && env-cmd -f .env.qa react-scripts start",
     "start:stage": "set PORT=4072 && env-cmd -f .env.staging react-scripts start",
+    "serve:develop": "set PORT=4070 && env-cmd -f .env.dev react-scripts start",
+    "serve:qa": "set PORT=4071 && env-cmd -f .env.qa react-scripts start",
+    "serve:stage": "set PORT=4072 && env-cmd -f .env.staging react-scripts start",
     "build": "react-scripts build",
     "build:develop": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
     "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
     "build:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
-    "serve:develop": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
-    "serve:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
-    "serve:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
-    "serve:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier:write": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\" --loglevel error",
