--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "serve:qa": "set PORT=4071 && env-cmd -f .env.qa react-scripts start",
     "serve:stage": "set PORT=4072 && env-cmd -f .env.staging react-scripts start",
     "build": "react-scripts build",
-    "build:develop": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
-    "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
-    "build:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
+    "build:develop": "set PORT=4070 && GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
+    "build:stage": "set PORT=4071 &&GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
+    "build:qa": "set PORT=4072 &&GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
