--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start:develop": "set PORT=4070 && env-cmd -f .env.dev react-scripts start",
-    "start:qa": "set PORT=4071 && env-cmd -f .env.qa react-scripts start",
-    "start:stage": "set PORT=4072 && env-cmd -f .env.staging react-scripts start",
-    "serve:develop": "set PORT=4070 && env-cmd -f .env.dev react-scripts start",
-    "serve:qa": "set PORT=4071 && env-cmd -f .env.qa react-scripts start",
-    "serve:stage": "set PORT=4072 && env-cmd -f .env.staging react-scripts start",
+    "start:develop": "env-cmd -f .env.dev react-scripts start",
+    "start:qa": "env-cmd -f .env.qa react-scripts start",
+    "start:stage": "env-cmd -f .env.staging react-scripts start",
+    "serve:develop": "PORT=4070 && env-cmd -f .env.dev react-scripts start",
+    "serve:qa": "PORT=4071 && env-cmd -f .env.qa react-scripts start",
+    "serve:stage": "PORT=4072 && env-cmd -f .env.staging react-scripts start",
     "build": "react-scripts build",
-    "build:develop": "set PORT=4070 && GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
-    "build:stage": "set PORT=4071 &&GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
-    "build:qa": "set PORT=4072 &&GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
+    "build:develop": " GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
+    "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
+    "build:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
