--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=https://squadspot-jplb.onrender.com
+REACT_APP_BASE_URL=https://api.dev.sspot.foxlabs.in/
 REACT_APP_APP_ENV=dev
 REACT_APP_FACEBOOK_APP_ID=2175488749318387
 REACT_APP_GOOGLE_APP_ID=632571890732-igmo756qdm8v46ngaqf8gr78h6o02ps7.apps.googleusercontent.com
