feat(scheduleAPI): Schedule API integrated

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux-persist": "^6.0.0",
     "rrule": "^2.7.1",
     "sass": "^1.57.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^3.1.1",
     "yup": "^0.32.11"
   },
