--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "antd": "^5.6.2",
     "axios": "^1.3.0",
     "dayjs": "^1.11.7",
+    "eslint-plugin-jest": "^26.3.0",
     "formik": "^2.2.9",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
