chore(settings): Master JSON settings

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "env-cmd -f .env.dev react-scripts start",
     "start:qa": "env-cmd -f .env.qa react-scripts start",
     "start:stage": "env-cmd -f .env.staging react-scripts start",
+    "start:master": "env-cmd -f .env.master react-scripts start",
     "serve:develop": "PORT=4070  env-cmd -f .env.dev react-scripts start",
     "serve:qa": "PORT=4071  env-cmd -f .env.qa react-scripts start",
     "serve:stage": "PORT=4072 env-cmd -f .env.staging react-scripts start",
+    "serve:master": "PORT=4073 env-cmd -f .env.master react-scripts start",
     "build": "react-scripts build",
     "build:develop": "GENERATE_SOURCEMAP=false env-cmd -f .env.dev react-scripts build",
     "build:stage": "GENERATE_SOURCEMAP=false env-cmd -f .env.staging react-scripts build",
     "build:qa": "GENERATE_SOURCEMAP=false env-cmd -f .env.qa react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false env-cmd -f .env.prod react-scripts build",
+    "build:master": "GENERATE_SOURCEMAP=false env-cmd -f .env.master react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier:write": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\" --loglevel error",
