--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.16",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -107,11 +108,12 @@
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "json-loader": "0.5.7",
+    "postcss": "^8.4.32",
     "prettier": "2.8.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^6.20.0",
     "style-loader": "0.23.1",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.3.2",
