--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dayjs": "^1.11.7",
     "eslint-plugin-jest": "^26.3.0",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "prop-types": "^15.7.2",
